# thesis-dynamic-direction-volleyball

./: README.md
court_mapper/: Cargo.toml  README.md  field_zones.json
court_mapper/src/: main.rs  structs.rs
rtsp_ball_detector/: Cargo.toml
rtsp_ball_detector/assets/: field_zones.json
rtsp_ball_detector/src/: main.rs  rtsp_processor.rs  zone_manager.rs
rtsp_ball_detector/src/detection/: background_subtractor.rs  bounding_box.rs  compare_models.rs  evaluation.rs  mod.rs  yolo.rs
