[package]
name = "rtsp_ball_detector"
version = "0.1.0"
edition = "2024"

[dependencies]
opencv = "0.95.1"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
itertools = "0.14.0"
plotters = "0.3.7"
rayon = "1.10.0"
quick-xml = "0.38.1"
ort = "1.16.3"
ndarray = "0.15.4"
dotenv = "0.15"